python/rregadmin/registry/registry_key_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^REG_KEY_TYPE_.* -r ^registry_key_.* -r ^RegistryKeyType$ -o registry_key_wrapper.py registry_key_wrapper.xml'
from ctypes import *

from rregadmin.registry.types_wrapper import reg_id
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.registry.types_wrapper import RegistryKey
from rregadmin.registry.types_wrapper import Registry
from rregadmin.registry.types_wrapper import hive_id
STRING = c_char_p
from rregadmin.hive.types_wrapper import KeyCell
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.util.path_wrapper import rra_path
from rregadmin.hive.types_wrapper import Hive


REG_KEY_TYPE_META = 1
REG_KEY_TYPE_LINK = 3
REG_KEY_TYPE_BASE = 2

# values for enumeration 'RegistryKeyType'
RegistryKeyType = c_int # enum
# ../../../rregadmin/registry/registry_key.h 73
registry_key_id_start = _libraries['librregadmin.so.1'].registry_key_id_start
registry_key_id_start.restype = reg_id
# registry_key_id_start()
registry_key_id_start.argtypes = []
registry_key_id_start.__doc__ = \
"""reg_id registry_key_id_start()
../../../rregadmin/registry/registry_key.h:73"""
# ../../../rregadmin/registry/registry_key.h 84
registry_key_new_base = _libraries['librregadmin.so.1'].registry_key_new_base
registry_key_new_base.restype = POINTER(RegistryKey)
# registry_key_new_base(in_reg, in_id, in_absolute_path)
registry_key_new_base.argtypes = [POINTER(Registry), hive_id, STRING]
registry_key_new_base.__doc__ = \
"""RegistryKey * registry_key_new_base(Registry * in_reg, hive_id in_id, unknown * in_absolute_path)
../../../rregadmin/registry/registry_key.h:84"""
# ../../../rregadmin/registry/registry_key.h 96
registry_key_new_link = _libraries['librregadmin.so.1'].registry_key_new_link
registry_key_new_link.restype = POINTER(RegistryKey)
# registry_key_new_link(in_reg, in_id, in_absolute_path, in_kc)
registry_key_new_link.argtypes = [POINTER(Registry), hive_id, STRING, POINTER(KeyCell)]
registry_key_new_link.__doc__ = \
"""RegistryKey * registry_key_new_link(Registry * in_reg, hive_id in_id, unknown * in_absolute_path, KeyCell * in_kc)
../../../rregadmin/registry/registry_key.h:96"""
# ../../../rregadmin/registry/registry_key.h 108
registry_key_new_meta = _libraries['librregadmin.so.1'].registry_key_new_meta
registry_key_new_meta.restype = POINTER(RegistryKey)
# registry_key_new_meta(in_reg, in_absolute_path, in_id)
registry_key_new_meta.argtypes = [POINTER(Registry), STRING, reg_id]
registry_key_new_meta.__doc__ = \
"""RegistryKey * registry_key_new_meta(Registry * in_reg, unknown * in_absolute_path, reg_id in_id)
../../../rregadmin/registry/registry_key.h:108"""
# ../../../rregadmin/registry/registry_key.h 117
registry_key_free = _libraries['librregadmin.so.1'].registry_key_free
registry_key_free.restype = gboolean
# registry_key_free(in_key)
registry_key_free.argtypes = [POINTER(RegistryKey)]
registry_key_free.__doc__ = \
"""gboolean registry_key_free(unknown * in_key)
../../../rregadmin/registry/registry_key.h:117"""
# ../../../rregadmin/registry/registry_key.h 127
registry_key_free_force = _libraries['librregadmin.so.1'].registry_key_free_force
registry_key_free_force.restype = gboolean
# registry_key_free_force(in_key)
registry_key_free_force.argtypes = [POINTER(RegistryKey)]
registry_key_free_force.__doc__ = \
"""gboolean registry_key_free_force(RegistryKey * in_key)
../../../rregadmin/registry/registry_key.h:127"""
# ../../../rregadmin/registry/registry_key.h 133
registry_key_copy = _libraries['librregadmin.so.1'].registry_key_copy
registry_key_copy.restype = POINTER(RegistryKey)
# registry_key_copy(in_key)
registry_key_copy.argtypes = [POINTER(RegistryKey)]
registry_key_copy.__doc__ = \
"""RegistryKey * registry_key_copy(unknown * in_key)
../../../rregadmin/registry/registry_key.h:133"""
# ../../../rregadmin/registry/registry_key.h 139
registry_key_get_path = _libraries['librregadmin.so.1'].registry_key_get_path
registry_key_get_path.restype = POINTER(rra_path)
# registry_key_get_path(in_key)
registry_key_get_path.argtypes = [POINTER(RegistryKey)]
registry_key_get_path.__doc__ = \
"""unknown * registry_key_get_path(unknown * in_key)
../../../rregadmin/registry/registry_key.h:139"""
# ../../../rregadmin/registry/registry_key.h 145
registry_key_get_type = _libraries['librregadmin.so.1'].registry_key_get_type
registry_key_get_type.restype = RegistryKeyType
# registry_key_get_type(in_key)
registry_key_get_type.argtypes = [POINTER(RegistryKey)]
registry_key_get_type.__doc__ = \
"""RegistryKeyType registry_key_get_type(unknown * in_key)
../../../rregadmin/registry/registry_key.h:145"""
# ../../../rregadmin/registry/registry_key.h 151
registry_key_get_id = _libraries['librregadmin.so.1'].registry_key_get_id
registry_key_get_id.restype = reg_id
# registry_key_get_id(in_key)
registry_key_get_id.argtypes = [POINTER(RegistryKey)]
registry_key_get_id.__doc__ = \
"""reg_id registry_key_get_id(unknown * in_key)
../../../rregadmin/registry/registry_key.h:151"""
# ../../../rregadmin/registry/registry_key.h 157
registry_key_get_key_cell = _libraries['librregadmin.so.1'].registry_key_get_key_cell
registry_key_get_key_cell.restype = POINTER(KeyCell)
# registry_key_get_key_cell(in_key)
registry_key_get_key_cell.argtypes = [POINTER(RegistryKey)]
registry_key_get_key_cell.__doc__ = \
"""KeyCell * registry_key_get_key_cell(unknown * in_key)
../../../rregadmin/registry/registry_key.h:157"""
# ../../../rregadmin/registry/registry_key.h 165
registry_key_set_key_cell = _libraries['librregadmin.so.1'].registry_key_set_key_cell
registry_key_set_key_cell.restype = gboolean
# registry_key_set_key_cell(in_key, in_cell)
registry_key_set_key_cell.argtypes = [POINTER(RegistryKey), POINTER(KeyCell)]
registry_key_set_key_cell.__doc__ = \
"""gboolean registry_key_set_key_cell(RegistryKey * in_key, KeyCell * in_cell)
../../../rregadmin/registry/registry_key.h:165"""
# ../../../rregadmin/registry/registry_key.h 171
registry_key_get_hive = _libraries['librregadmin.so.1'].registry_key_get_hive
registry_key_get_hive.restype = POINTER(Hive)
# registry_key_get_hive(in_key)
registry_key_get_hive.argtypes = [POINTER(RegistryKey)]
registry_key_get_hive.__doc__ = \
"""Hive * registry_key_get_hive(unknown * in_key)
../../../rregadmin/registry/registry_key.h:171"""
# ../../../rregadmin/registry/registry_key.h 177
registry_key_get_hive_type = _libraries['librregadmin.so.1'].registry_key_get_hive_type
registry_key_get_hive_type.restype = c_int
# registry_key_get_hive_type(in_key)
registry_key_get_hive_type.argtypes = [POINTER(RegistryKey)]
registry_key_get_hive_type.__doc__ = \
"""int registry_key_get_hive_type(unknown * in_key)
../../../rregadmin/registry/registry_key.h:177"""
# ../../../rregadmin/registry/registry_key.h 183
registry_key_get_hive_filename = _libraries['librregadmin.so.1'].registry_key_get_hive_filename
registry_key_get_hive_filename.restype = STRING
# registry_key_get_hive_filename(in_key)
registry_key_get_hive_filename.argtypes = [POINTER(RegistryKey)]
registry_key_get_hive_filename.__doc__ = \
"""unknown * registry_key_get_hive_filename(unknown * in_key)
../../../rregadmin/registry/registry_key.h:183"""
# ../../../rregadmin/registry/registry_key.h 189
registry_key_get_hive_id = _libraries['librregadmin.so.1'].registry_key_get_hive_id
registry_key_get_hive_id.restype = hive_id
# registry_key_get_hive_id(in_key)
registry_key_get_hive_id.argtypes = [POINTER(RegistryKey)]
registry_key_get_hive_id.__doc__ = \
"""hive_id registry_key_get_hive_id(unknown * in_key)
../../../rregadmin/registry/registry_key.h:189"""
__all__ = ['registry_key_new_link', 'registry_key_get_hive',
           'registry_key_get_hive_type', 'registry_key_get_path',
           'RegistryKeyType', 'registry_key_copy',
           'registry_key_get_type', 'REG_KEY_TYPE_BASE',
           'registry_key_new_meta', 'REG_KEY_TYPE_LINK',
           'registry_key_get_key_cell', 'registry_key_id_start',
           'registry_key_set_key_cell', 'registry_key_free',
           'registry_key_new_base', 'registry_key_get_hive_filename',
           'REG_KEY_TYPE_META', 'registry_key_get_id',
           'registry_key_get_hive_id', 'registry_key_free_force']
